--- a/testvm/Vagrantfile
+++ b/testvm/Vagrantfile
@@ -4,6 +4,8 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "gschaetz/Debian9-Desktop"
   config.vm.box_version = "1.0.0"
+  config.ssh.username = "vagrant"
+  config.ssh.password = "vagrant"
 
   config.vm.provider "virtualbox" do |vb|
     # Display the VirtualBox GUI when booting the machine
