--- a/testvm/Vagrantfile
+++ b/testvm/Vagrantfile
@@ -6,6 +6,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_version = "1.0.0"
   config.ssh.username = "vagrant"
   config.ssh.password = "vagrant"
+  config.vm.synced_folder "../ansible/", "/home/vagrant/ansible/"
 
   config.vm.provider "virtualbox" do |vb|
     # Display the VirtualBox GUI when booting the machine
