--- a/testvm/Vagrantfile
+++ b/testvm/Vagrantfile
@@ -13,6 +13,8 @@ Vagrant.configure("2") do |config|
     vb.gui = true
     # Customize the amount of memory on the VM:
     vb.memory = "1024"
+    vb.customize ["modifyvm", :id, "--vram", "128"]
+    vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"] 
   end
   
   # config.vm.provision "shell", inline: <<-SHELL
