--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -8,6 +8,11 @@
         [
           'org.gnome.desktop.background show-desktop-icons true',
           'org.gnome.shell enabled-extensions ''["apps-menu@gnome-shell-extensions.gcampax.github.com","dash-to-dock@micxgx.gmail.com"]''',
-          'org.gnome.shell.extensions.dash-to-dock dock-position "BOTTOM"'
+          'org.gnome.shell.extensions.dash-to-dock dock-position "BOTTOM"',
+          'org.gnome.shell.extensions.dash-to-dock preferred-monitor 0',
+          'org.gnome.shell.extensions.dash-to-dock custom-theme-shrink true',
+          'org.gnome.nautilus.icon-view default-zoom-level "small" ',
+          'org.gnome.shell.extensions.dash-to-dock show-show-apps-button false',
+          'org.gnome.shell favorite-apps ''["firefox-esr.desktop", "rhythmbox.desktop", "org.gnome.Nautilus.desktop", "org.gnome.Software.desktop", "org.gnome.Terminal.desktop","yelp.desktop"]'''
         ]
       }
