--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -1,21 +1,13 @@
 ---
 - hosts: all
+  vars:
+    gnome_settings_json: "{{lookup('file','/home/vagrant/ansible/desktop-ansible-settings/gnome-settings.json')}}"
+  
   tasks:
-    - apt: name=curl state=present
+    - apt: name=curl state=present  
   roles:
     - { role: gschaetz.desktopsetup, 
-        gnomeSettings:
-        [
-          'org.gnome.desktop.background show-desktop-icons true',
-          'org.gnome.shell enabled-extensions ''["apps-menu@gnome-shell-extensions.gcampax.github.com","dash-to-dock@micxgx.gmail.com"]''',
-          'org.gnome.shell.extensions.dash-to-dock dock-position "BOTTOM"',
-          'org.gnome.shell.extensions.dash-to-dock preferred-monitor 0',
-          'org.gnome.shell.extensions.dash-to-dock custom-theme-shrink true',
-          'org.gnome.nautilus.icon-view default-zoom-level "small" ',
-          'org.gnome.shell.extensions.dash-to-dock show-show-apps-button false',
-          'org.gnome.desktop.wm.preferences button-layout ''appmenu:minimize,maximize,close''',
-          'org.gnome.shell favorite-apps ''["firefox-esr.desktop", "rhythmbox.desktop", "org.gnome.Nautilus.desktop", "org.gnome.Software.desktop", "org.gnome.Terminal.desktop","yelp.desktop"]'''
-        ]
+        gnomeSettings: "{{ gnome_settings_json }}"
       }
     - { role: gschaetz.install-docker,
         non_root_user: 'vagrant'
