--- a/ansible/desktop-ansible-settings/applications.yml
+++ b/ansible/desktop-ansible-settings/applications.yml
@@ -2,27 +2,21 @@
 applications:
     firefox:
         implementation_type: docker
-        file_location: /home/vagrant/devdesktop/
-        docker_repository: registry.hub.docker.io
-        docker_repository_username: test
-        docker_repository_password: test
         docker_image: tramasoli/firefox-image:latest
         docker_ports: 22:22,443:443
-        docker_volumes: /home/vagrant/devdestkop/firefox/:/test
+        docker_volumes: /:/host_drive
         desktop_name: Firefox
-        desktop_exec: /home/vagrant/devdesktop/firefox/start.sh
-        desktop_icon: http://iosicongallery.com/img/512/firefox-web-browser-2015.png
+        desktop_exec: start.sh
+        desktop_icon_download_url: https://findicons.com/files/icons/1070/software/128/mozilla_firefox.png
+        desktop_icon: firefox.png
         gui_app: true
     chrome:
         implementation_type: docker
-        file_location: /home/vagrant/devdesktop/
-        docker_repository: registry.hub.docker.io
-        docker_repository_username: test
-        docker_repository_password: test
-        docker_image: tramasoli/firefox-image:latest
+        docker_image: jess/chrome:latest
         docker_ports: 22:22,443:443
-        docker_volumes: /home/vagrant/devdestkop/firefox/:/test
+        docker_volumes: /:/host_drive
         desktop_name: Chrome
-        desktop_exec: /home/vagrant/devdesktop/firefox/start.sh
-        desktop_icon: http://iosicongallery.com/img/512/firefox-web-browser-2015.png
-        gui_app: true
+        desktop_exec: start.sh
+        desktop_icon_download_url: http://icons.iconarchive.com/icons/google/chrome/128/Google-Chrome-icon.png
+        desktop_icon: chrome.png
+        gui_app: false
