--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -5,18 +5,19 @@
     gnome_settings_yaml: '/home/vagrant/ansible/desktop-ansible-settings/gnome-settings.yml'     
     applications_yaml:  '/home/vagrant/ansible/desktop-ansible-settings/applications.yml'
     packages_yaml: '/home/vagrant/ansible/desktop-ansible-settings/packages.yml'
+    desktop_directory: '/home/vagrant/.desktop/'
 
   roles:
-    - { role: gschaetz.packages, 
-        packages: "{{ packages_yaml }}"
-      }
-      
+    # - { role: gschaetz.packages, 
+    #     packages: "{{ packages_yaml }}"
+    #   }
     # - { role: gschaetz.desktopsetup, 
     #     gnomeSettings: "{{ gnome_settings_yaml }}"
     #   }
     # - { role: gschaetz.install-docker,
     #     non_root_user: 'vagrant'
     #   }
-    # - { role: gschaetz.provision-desktop,
-    #     application_setup: "{{ applications_yaml }}" 
-    #   }
+    - { role: gschaetz.provision-desktop,
+        application_setup: "{{ applications_yaml }}",
+        desktop_dir: "{{ desktop_directory }}"
+      }
