--- a/ansible/desktop-ansible-settings/applications.yml
+++ b/ansible/desktop-ansible-settings/applications.yml
@@ -3,8 +3,8 @@ applications:
     firefox:
         implementation_type: docker
         docker_image: tramasoli/firefox-image:latest
-        docker_ports: 22:22,443:443
-        docker_volumes: /:/host_drive
+        docker_ports: 
+        docker_volumes: -v /:/host_drive
         desktop_name: Firefox
         desktop_exec: start.sh
         desktop_icon_download_url: https://findicons.com/files/icons/1070/software/128/mozilla_firefox.png
@@ -13,7 +13,7 @@ applications:
     chrome:
         implementation_type: docker
         docker_image: jess/chrome:latest
-        docker_ports: 22:22,443:443
+        docker_ports: 
         docker_volumes: /:/host_drive
         desktop_name: Chrome
         desktop_exec: start.sh
