--- a/ansible/provdesktop.yml
+++ b/ansible/provdesktop.yml
@@ -1,11 +1,16 @@
 ---
 - hosts: all
   vars:
+    current_path: "{{ lookup('env','PWD') }}"
+
     local_home: "{{ lookup('env','HOME') }}"
-    gnome_settings_yaml: '/home/vagrant/ansible/desktop-ansible-settings/gnome-settings.yml'     
-    applications_yaml:  '/home/vagrant/ansible/desktop-ansible-settings/applications.yml'
-    packages_yaml: '/home/vagrant/ansible/desktop-ansible-settings/packages.yml'
-    desktop_directory: '/home/vagrant/.desktop/'
+    project_home: "{{ DESKTOP_PROJECT_DIR | default(current_path) }}"
+
+    gnome_settings_yaml: "{{ project_home }}/desktop-ansible-settings/gnome-settings.yml"     
+    applications_yaml:  "{{ project_home }}/desktop-ansible-settings/applications.yml"
+    packages_yaml: "{{ project_home }}/desktop-ansible-settings/packages.yml"
+
+    desktop_directory: "{{ local_home }}/.desktop/"
 
   roles:
     # - { role: gschaetz.packages, 
