--- a/ansible/desktop-ansible-settings/applications.yml
+++ b/ansible/desktop-ansible-settings/applications.yml
@@ -5,10 +5,12 @@ applications:
         docker_image: jess/firefox:latest
         docker_ports: 
         docker_volumes: -v /:/host_drive
+        show_on_desktop: false
         desktop_name: Firefox
         desktop_exec: start.sh
         desktop_icon_download_url: https://findicons.com/files/icons/1070/software/128/mozilla_firefox.png
         desktop_icon: firefox.png
+        menu_category: Network;WebBrowser;
         gui_app: true
         extra_docker_flags: 
         docker_network: dev
@@ -17,10 +19,12 @@ applications:
         docker_image: jess/chrome:latest
         docker_ports: 
         docker_volumes: -v /:/host_drive
+        show_on_desktop: true
         desktop_name: Chrome
         desktop_exec: start.sh
         desktop_icon_download_url: http://icons.iconarchive.com/icons/google/chrome/128/Google-Chrome-icon.png
         desktop_icon: chrome.png
+        menu_category: Network;WebBrowser;
         gui_app: true
         extra_docker_flags: --privileged
         docker_network: dev
