--- a/ansible/desktop-ansible-settings/applications.yml
+++ b/ansible/desktop-ansible-settings/applications.yml
@@ -7,7 +7,7 @@ applications:
         docker_volumes: -v /:/host_drive
         show_on_desktop: false
         desktop_name: Firefox
-        desktop_exec: start.sh
+        desktop_exec: firefox
         desktop_icon_download_url: https://findicons.com/files/icons/1070/software/128/mozilla_firefox.png
         desktop_icon: firefox.png
         menu_category: Network;WebBrowser;
@@ -21,7 +21,7 @@ applications:
         docker_volumes: -v /:/host_drive
         show_on_desktop: true
         desktop_name: Chrome
-        desktop_exec: start.sh
+        desktop_exec: chrome
         desktop_icon_download_url: http://icons.iconarchive.com/icons/google/chrome/128/Google-Chrome-icon.png
         desktop_icon: chrome.png
         menu_category: Network;WebBrowser;
