--- a/ansible/desktop-ansible-settings/applications.yml
+++ b/ansible/desktop-ansible-settings/applications.yml
@@ -28,3 +28,39 @@ applications:
         gui_app: true
         extra_docker_flags: --privileged
         docker_network: dev
+    wordpress_compose:
+        implementation_type: docker_compose
+        show_on_desktop: true
+        desktop_name: wordpress_compose
+        desktop_exec: wordpress_compose
+        desktop_icon_download_url: http://icons.iconarchive.com/icons/graphics-vibe/simple-rounded-social/128/wordpress-icon.png
+        desktop_icon: wordpress_compose.png
+        menu_category: Network;WebBrowser;
+        gui_app: true
+        compose_version: "version: '2'"
+        compose_network: dev
+        compose_definition:
+            services:
+                db:
+                    image: mysql:5.7
+                    volumes:
+                        - dbdata:/var/lib/mysql
+                    restart: always
+                    environment:
+                        MYSQL_ROOT_PASSWORD: somewordpress
+                        MYSQL_DATABASE: wordpress
+                        MYSQL_USER: wordpress
+                        MYSQL_PASSWORD: wordpress
+                wordpress:
+                    depends_on:
+                        - db
+                    image: wordpress:latest
+                    ports:
+                        - "8000:80"
+                    restart: always
+                    environment:
+                        WORDPRESS_DB_HOST: db:3306
+                        WORDPRESS_DB_USER: wordpress
+                        WORDPRESS_DB_PASSWORD: wordpress
+            volumes:
+                dbdata:
