fixed docker compose

--- a/ansible/desktop-ansible-settings/packages.yml
+++ b/ansible/desktop-ansible-settings/packages.yml
@@ -4,3 +4,5 @@ packages:
         package_name: curl
     tmux:
         package_name: tmux
+    docker_compose:
+        package_name: docker-compose
