--- a/ansible/configure-applications/tasks/main.yml
+++ b/ansible/configure-applications/tasks/main.yml
@@ -117,6 +117,6 @@
 # create a file in /etc/profile.d
 - name: create file in path for env 
   copy: 
-    content: "PATH=$PATH:/usr/local/bin/myapps/ \n xhost +" 
+    content: "PATH=/usr/local/bin/myapps/:$PATH \n xhost +" 
     dest: "/etc/profile.d/custom-path.sh"
   become: true
