--- a/ansible/desktop-ansible-settings/gnome-settings.yml
+++ b/ansible/desktop-ansible-settings/gnome-settings.yml
@@ -18,8 +18,6 @@ gnome:
     setting: org.gnome.desktop.wm.preferences button-layout 'appmenu:minimize,maximize,close'
   favorite_apps: 
     setting: org.gnome.shell favorite-apps '["Firefox-myapps.desktop", "Chrome-myapps.desktop", "rhythmbox.desktop", "org.gnome.Nautilus.desktop", "org.gnome.Software.desktop", "org.gnome.Terminal.desktop","yelp.desktop"]'
-  background:
-    download:
-      url: http://1.bp.blogspot.com/_Dob8rJ0PLZI/TQGwb7IZPhI/AAAAAAAAACY/rHz0TMmE2ts/s1600/grayLinux1280.jpg
-      dest: {{ desktop_dir }}background.jpg
-    setting: org.gnome.desktop.background picture-uri file:///{{ desktop_dir }}background.jpg    
+gnome_background:
+    background: 
+      background_url: http://1.bp.blogspot.com/_Dob8rJ0PLZI/TQGwb7IZPhI/AAAAAAAAACY/rHz0TMmE2ts/s1600/grayLinux1280.jpg
